Added the additional jars and files for the database

--- a/CS320_EscapeRoom/.classpath
+++ b/CS320_EscapeRoom/.classpath
@@ -12,5 +12,27 @@
 	<classpathentry kind="lib" path="lib/derbynet.jar"/>
 	<classpathentry kind="lib" path="lib/derbyrun.jar"/>
 	<classpathentry kind="lib" path="lib/derbytools.jar"/>
+	<classpathentry kind="lib" path="lib/annotations/asm-5.1.jar"/>
+	<classpathentry kind="lib" path="lib/annotations/asm-commons-5.1.jar"/>
+	<classpathentry kind="lib" path="lib/annotations/javax.annotation-api-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/apache-jsp/org.eclipse.jdt.core.compiler.ecj-4.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/apache-jsp/org.eclipse.jetty.apache-jsp-9.4.3.v20170317.jar"/>
+	<classpathentry kind="lib" path="lib/apache-jsp/org.mortbay.jasper.apache-el-8.5.9.1.jar"/>
+	<classpathentry kind="lib" path="lib/apache-jsp/org.mortbay.jasper.apache-jsp-8.5.9.1.jar"/>
+	<classpathentry kind="lib" path="lib/apache-jstl/org.apache.taglibs.taglibs-standard-impl-1.2.5.jar"/>
+	<classpathentry kind="lib" path="lib/apache-jstl/org.apache.taglibs.taglibs-standard-spec-1.2.5.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-annotations-9.4.3.v20170317.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-http-9.4.3.v20170317.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-io-9.4.3.v20170317.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-jmx-9.4.3.v20170317.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-plus-9.4.3.v20170317.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-schemas-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-security-9.4.3.v20170317.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-server-9.4.3.v20170317.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-servlet-9.4.3.v20170317.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-util-9.4.3.v20170317.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-webapp-9.4.3.v20170317.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-xml-9.4.3.v20170317.jar"/>
+	<classpathentry kind="lib" path="lib/servlet-api-3.1.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
