Added database functionality for the authors table as an example

--- a/CS320_EscapeRoom/war/WEB-INF/web.xml
+++ b/CS320_EscapeRoom/war/WEB-INF/web.xml
@@ -8,36 +8,21 @@
   <!-- Servlets -->
   <servlet>
     <servlet-name>IndexServlet</servlet-name>
-    <servlet-class>edu.ycp.cs320.CS320_EscapeRoom.servlet.IndexServlet</servlet-class>
+    <servlet-class>servlet.IndexServlet</servlet-class>
   </servlet>
   <servlet>
     <servlet-name>GameServlet</servlet-name>
-    <servlet-class>edu.ycp.cs320.CS320_EscapeRoom.servlet.GameServlet</servlet-class>
+    <servlet-class>servlet.GameServlet</servlet-class>
   </servlet>
   <servlet>
     <servlet-name>LoginServlet</servlet-name>
-    <servlet-class>edu.ycp.cs320.CS320_EscapeRoom.servlet.LoginServlet</servlet-class>
+    <servlet-class>servlet.LoginServlet</servlet-class>
   </servlet>
-  <servlet>
-    <servlet-name>MultiplyNumbersServlet</servlet-name>
-    <servlet-class>edu.ycp.cs320.CS320_EscapeRoom.servlet.MultiplyNumbersServlet</servlet-class>
-  </servlet>
+ 
 
   
-  
-  <!-- AJAX servlets. -->
-  <servlet>
-    <servlet-name>AddNumbersAjaxServlet</servlet-name>
-    <servlet-class>edu.ycp.cs320.CS320_EscapeRoom.servlet.ajax.AddNumbersAjaxServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>NextGuessAjaxServlet</servlet-name>
-    <servlet-class>edu.ycp.cs320.CS320_EscapeRoom.servlet.ajax.NextGuessAjaxServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>MultiplyNumbersAjaxServlet</servlet-name>
-    <servlet-class>edu.ycp.cs320.CS320_EscapeRoom.servlet.ajax.MultiplyNumbersAjaxServlet</servlet-class>
-  </servlet>
+ 
+
   
 
 
@@ -55,29 +40,13 @@
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
   
-  <servlet-mapping>
-    <servlet-name>MultiplyNumbersServlet</servlet-name>
-    <url-pattern>/MultiplyNumbers</url-pattern>
-  </servlet-mapping>
+
   
   
   
 
 
   
-  <!--  AJAX servlet mappings. -->
-  <servlet-mapping>
-    <servlet-name>AddNumbersAjaxServlet</servlet-name>
-    <url-pattern>/ajax/addNumbers</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>NextGuessAjaxServlet</servlet-name>
-    <url-pattern>/ajax/nextGuess</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>MultiplyNumbersAjaxServlet</servlet-name>
-    <url-pattern>/ajax/MultiplyNumbers</url-pattern>
-  </servlet-mapping>
 
 
   <welcome-file-list>
