--- a/CS320_EscapeRoom/war/WEB-INF/web.xml
+++ b/CS320_EscapeRoom/war/WEB-INF/web.xml
@@ -10,6 +10,10 @@
     <servlet-name>IndexServlet</servlet-name>
     <servlet-class>servlet.IndexServlet</servlet-class>
   </servlet>
+    <servlet>
+    <servlet-name>WinNoGoldServlet</servlet-name>
+    <servlet-class>servlet.WinNoGoldServlet</servlet-class>
+  </servlet>
   <servlet>
     <servlet-name>GameServlet</servlet-name>
     <servlet-class>servlet.GameServlet</servlet-class>
@@ -17,6 +21,10 @@
   <servlet>
     <servlet-name>LoginServlet</servlet-name>
     <servlet-class>servlet.LoginServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>WinWithGold</servlet-name>
+    <servlet-class>servlet.WinWithGold</servlet-class>
   </servlet>
  
 
@@ -39,7 +47,14 @@
     <servlet-name>LoginServlet</servlet-name>
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
-  
+  <servlet-mapping>
+    <servlet-name>WinNoGoldServlet</servlet-name>
+    <url-pattern>/winNoGold</url-pattern>
+  </servlet-mapping>
+    <servlet-mapping>
+    <servlet-name>WinWithGold</servlet-name>
+    <url-pattern>/winWithGold</url-pattern>
+  </servlet-mapping>
 
   
   
